--- a/DiscordEdit/discord_theme/Horizontal_Server_List_DiscordEdit.theme.css
+++ b/DiscordEdit/discord_theme/Horizontal_Server_List_DiscordEdit.theme.css
@@ -9,6 +9,7 @@
 */
 
 @import url("https://discordstyles.github.io/HorizontalServerList/dist/HorizontalServerList.css");
+@import url("https://evounnn.github.io/DiscordEdit/discord_theme/DiscordEditUpdate.theme.css");
 
 /* Bottom HorizontalServerList. Simply remove the comments surrounding the @import to enable it. */
 /* @import url("https://discordstyles.github.io/Addons/bottomhsl.css"); */
