--- a/DiscordEdit/discord_theme/DiscordEdit_small_settings.theme.css
+++ b/DiscordEdit/discord_theme/DiscordEdit_small_settings.theme.css
@@ -1,8 +1,8 @@
 /**
  * @name DiscordEdit_Small_Settings
- * @version 1.2.0
- * @description Tu peux changer en modifiant les informations du fichier BetterDiscord pour un custom complet ! + Radial Status
- * @author E.#7528, Gibbu#1211
+ * @version 1.0.0
+ * @description Edit settings menu (with DiscordEdit).
+ * @author E.#7528
  * @authorId 
  * @website https://evounnn.github.io/DiscordEdit/web/index.html
  * @invite pMu2X4w3ru
