--- a/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
@@ -21,6 +21,13 @@ div.avatarWrapperNormal-ahVUaC.avatarWrapper-eenWra.avatarPositionNormal-2jWoC2.
 
 }
 
+#app-mount .avatarWrapperNormal-1tQ3Je.avatarWrapper-3y0KZ1.avatarPositionPanel-3P4Ted{
+	margin-left: -10px!important;
+	margin-top: -4px;
+	z-index: 100000;
+}
+
+
 /*CSS*/
 
 /*Text color*/
