--- a/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
@@ -989,3 +989,10 @@ div.avatarWrapperNormal-ahVUaC.avatarWrapper-eenWra.avatarPositionNormal-2jWoC2.
 #app-mount .item-3XjbnG.themed-2-lozF .tabBarItemContainer-2HdIlr path[d="M18 2H7C5.897 2 5 2.898 5 4V11H12.59L10.293 8.708L11.706 7.292L16.414 11.991L11.708 16.706L10.292 15.294L12.582 13H5V20C5 21.103 5.897 22 7 22H18C19.103 22 20 21.103 20 20V4C20 2.898 19.103 2 18 2Z"],.sidebar-nqHbhN .side-2ur1Qk:is([aria-label="Brugerindstillinger" i], [aria-label="Benutzereinstellungen" i], [aria-label="User Settings" i], [aria-label="Ajustes de usuario" i], [aria-label="Paramètres utilisateur" i], [aria-label="Korisničke postavke" i], [aria-label="Impostazioni utente" i], [aria-label="Naudotojo Nustatymai" i], [aria-label="Felhasználói beállítások" i], [aria-label="Gebruikersinstellingen" i], [aria-label="Brukerinnstillinger" i], [aria-label="Ustawienia użytkownika" i], [aria-label="Configurações de Usuário" i], [aria-label="Setări utilizator" i], [aria-label="Käyttäjäasetukset" i], [aria-label="Användarinställningar" i], [aria-label="Cài đặt người dùng" i], [aria-label="Kullanıcı Ayarları" i], [aria-label="Uživatelská nastavení" i], [aria-label="Ρυθμίσεις χρήστη" i], [aria-label="Потребителски настройки" i], [aria-label="Настройки пользователя" i], [aria-label="Користувацькі налаштування" i], [aria-label="यूज़र सेटिंग" i], [aria-label="ตั้งค่าผู้ใช้" i], [aria-label="用户设置" i], [aria-label="ユーザー設定" i], [aria-label="使用者設定" i], [aria-label="사용자 설정" i]) .item-3XjbnG:nth-last-child(4),#app-mount .sidebar-nqHbhN .side-2ur1Qk .item-3XjbnG[aria-controls="logout-tab" i]{
 	color: red!important;
 }
+
+.container-YkUktl .avatarSpeaking-33RRJU{
+    margin-top: 0px;
+    margin-left: 0px;
+    width: 32px!important;
+    height: 32px!important;
+}
