--- a/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
@@ -997,10 +997,6 @@ div.avatarWrapperNormal-ahVUaC.avatarWrapper-eenWra.avatarPositionNormal-2jWoC2.
     height: 32px!important;
 }
 
-.viewers-15Alqi.leftTrayIcon-3kMl25.viewersButton-1FOfBR .mask-1FEkla.svg-2azL_l{
-	padding: 0;
-}
-
-.flex-2S1XBF.flex-3BkGQD.horizontal-112GEH.horizontal-1Piu5-.flex-3BkGQD.directionRow-2Iu2A9.justifyStart-2Mwniq.alignCenter-14kD11.noWrap-hBpHBz.memberListItem-3V-x8Q.memberListItem-ui7SEK .mask-1FEkla.svg-2azL_l{
+.viewers-15Alqi.leftTrayIcon-3kMl25.viewersButton-1FOfBR .mask-1FEkla.svg-2azL_l, .topSection-1Khgkv .wrapper-1VLyxH.avatar-1YsFQ1 .mask-1FEkla.svg-2azL_l, .flex-2S1XBF.flex-3BkGQD.horizontal-112GEH.horizontal-1Piu5-.flex-3BkGQD.directionRow-2Iu2A9.justifyStart-2Mwniq.alignCenter-14kD11.noWrap-hBpHBz.memberListItem-3V-x8Q.memberListItem-ui7SEK .mask-1FEkla.svg-2azL_l{
 	padding: 0;
 }
