--- a/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
@@ -1000,3 +1000,7 @@ div.avatarWrapperNormal-ahVUaC.avatarWrapper-eenWra.avatarPositionNormal-2jWoC2.
 .viewers-15Alqi.leftTrayIcon-3kMl25.viewersButton-1FOfBR .mask-1FEkla.svg-2azL_l, .topSection-1Khgkv .wrapper-1VLyxH.avatar-1YsFQ1 .mask-1FEkla.svg-2azL_l, .flex-2S1XBF.flex-3BkGQD.horizontal-112GEH.horizontal-1Piu5-.flex-3BkGQD.directionRow-2Iu2A9.justifyStart-2Mwniq.alignCenter-14kD11.noWrap-hBpHBz.memberListItem-3V-x8Q.memberListItem-ui7SEK .mask-1FEkla.svg-2azL_l{
 	padding: 0;
 }
+
+.button-1EGGcP.buttonColor-3bP3fX.button-ejjZWC.lookFilled-1H2Jvj.colorBrand-2M3O3N.sizeSmall-3R2P2p.fullWidth-3M-YBR.grow-2T4nbg.button-1EGGcP, .button-1EGGcP.buttonColor-3bP3fX.button-ejjZWC.lookFilled-1H2Jvj.colorBrand-2M3O3N.sizeSmall-3R2P2p.grow-2T4nbg.button-1EGGcP{
+	border: 2px solid var(--border-color);
+}
