--- a/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
@@ -368,7 +368,7 @@ div.avatarWrapperNormal-ahVUaC.avatarWrapper-eenWra.avatarPositionNormal-2jWoC2.
   border-right: none;
 }
 
-.scroller-3X7KbA.none-2-_0dP.scrollerBase-_bVAAt{
+.scroller-3X7KbA.none-1rXy4P.scrollerBase-1Pkza4{
   border: 5px solid var(--border-color);
   border-right: none;
 }
