--- a/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
@@ -740,14 +740,14 @@ div.avatarWrapperNormal-ahVUaC.avatarWrapper-eenWra.avatarPositionNormal-2jWoC2.
 .wordmarkWindows-2dq6rw{
     left: 50%;
 }
-/*.typeWindows-2-g3UY.withFrame-2dL45i.titleBar-1it3bQ.horizontalReverse-2QssvL.flex-3BkGQD.directionRowReverse-HZatnx.justifyStart-2Mwniq.alignStretch-Uwowzr::before{
+.typeWindows-2-g3UY.withFrame-2dL45i.titleBar-1it3bQ.horizontalReverse-2QssvL.flex-3BkGQD.directionRowReverse-HZatnx.justifyStart-2Mwniq.alignStretch-Uwowzr::before{
     content: "Thème By E.";
     left: 0;
     position: absolute;
     margin-left: 7px;
     color: var(--color-icon);
     font-weight: bold;
-}*/
+}
 
 .profilePanel-2PWEok{
     border-left: 5px solid var(--border-color);
@@ -799,8 +799,10 @@ div.avatarWrapperNormal-ahVUaC.avatarWrapper-eenWra.avatarPositionNormal-2jWoC2.
 
 .bannerSVGWrapper-qc0szY{
     border-bottom: 5px solid var(--border-color);
+    min-width: 350px;
+    margin-left: -5px;
+    margin-top: -5px;
 }
-
 
 .wrapper-1VLyxH.avatar-1YsFQ1 .avatar-b5OQ1N{
     background-color: black;
