--- a/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
@@ -1043,3 +1043,18 @@ div.avatarWrapperNormal-ahVUaC.avatarWrapper-eenWra.avatarPositionNormal-2jWoC2.
 	width: 90px!important;
 	height: 90px!important;
 }
+
+.userInfo-regn9W .wrapper-1VLyxH.avatar-3mTjvZ .mask-1FEkla.svg-2azL_l{
+	margin-left: -0px;
+	margin-top: -4px;
+	width: 102px!important;
+	height:  102px!important;
+	padding-left: 0;
+}
+
+.userInfo-regn9W .wrapper-1VLyxH.avatar-3mTjvZ .mask-1FEkla.svg-2azL_l .avatar-b5OQ1N{
+	margin-top: -5px;
+	margin-left: -5px;
+	width: 90px!important;
+	height: 90px!important;
+}
