--- a/DiscordEdit/discord_theme/DiscordEdit_small_settings.theme.css
+++ b/DiscordEdit/discord_theme/DiscordEdit_small_settings.theme.css
@@ -4,7 +4,7 @@
  * @description Edit settings menu (with DiscordEdit).
  * @author E.#7528
  * @authorId 
- * @website https://evounnn.github.io/DiscordEdit/web/index.html
+ * @website https://evounnn.github.io/
  * @invite pMu2X4w3ru
 */
 
