--- a/DiscordEdit/discord_theme/Horizontal_Server_List_DiscordEdit.theme.css
+++ b/DiscordEdit/discord_theme/Horizontal_Server_List_DiscordEdit.theme.css
@@ -3,7 +3,7 @@
  * @author Gibbu#1211 and E.#7528
  * @version 2.1.0
  * @invite ZHthyCw
- * @description Moves the server list from the left to the top of Discord. Compatible with Server Folders and most basic transparent themes. Edit for DiscordEdit by E.7528.
+ * @description (Link of Gibbu only) Moves the server list from the left to the top of Discord. Compatible with Server Folders and most basic transparent themes. Edit for DiscordEdit by E.7528.
  * @source https://github.com/DiscordStyles/HorizontalServerList
  * @website https://www.gibbu.me
 */
