--- a/DiscordEdit/discord_theme/icons_mwittrien.theme.css
+++ b/DiscordEdit/discord_theme/icons_mwittrien.theme.css
@@ -1,8 +1,9 @@
 /**
  * @name Icons_MWittrien
  * @version 1.0.0
- * @description Icons by MWittrien and source code uploaded on this theme by E.
+ * @description (Link of MWittrien only) Icons by MWittrien and source code uploaded on this theme by E.
  * @author E.#7528
+ * @website https://mwittrien.github.io/
 */
 
 :root {
