--- a/DiscordEdit/discord_theme/DiscordEditUpdate.theme.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdate.theme.css
@@ -3,7 +3,7 @@
  * @version ersion Public
  * @description Tu peux changer en modifiant les informations du fichier BetterDiscord pour un custom complet !
  * @author E.
- * @website https://evounnn.github.io/DiscordEdit/web/index.html
+ * @website https://evounnn.github.io/
  * @invite pMu2X4w3ru
 */
 
