--- a/DiscordEdit/web/css/main.css
+++ b/DiscordEdit/web/css/main.css
@@ -1104,3 +1104,7 @@ div.dashboardpluginc{
 	border: 1px solid var(--border-color);
 	background-color: black;
 }
+
+DiscordEditWebsitea{
+	text-decoration: none;
+}
