--- a/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
@@ -305,7 +305,7 @@
 
 /*Window top bar*/
 
-.typeWindows-2-g3UY.withFrame-2dL45i.titleBar-1it3bQ.horizontalReverse-2QssvL.flex-3BkGQD.directionRowReverse-HZatnx.justifyStart-2Mwniq.alignStretch-Uwowzr{
+.typeWindows-2-g3UY{
   border: 5px solid var(--border-color);
   border-bottom: none;
   margin-top: 0;
