--- a/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
@@ -888,3 +888,7 @@
   border-radius: 10px;
   border: 4px solid var(--border-color);
 }
+
+.theme-dark .container-2qjEOK, .theme-dark .page-2dwf_i, .theme-dark .sidebar-2rB69-{
+	background-color: var(--background-color);
+}
