--- a/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
@@ -305,14 +305,14 @@
 
 /*Window top bar*/
 
-.typeWindows-2-g3UY{
+.typeWindows-3ILlhq{
   border: 5px solid var(--border-color);
   border-bottom: none;
   margin-top: 0;
   background-color: var(--background-color);
 }
 
-.winButtonClose-3Q8ZH5 {
+.winButtonClose-23zAIt {
   height: 18px!important;
   margin-top: -5px!important;
   margin-right: -5px!important;
@@ -320,7 +320,7 @@
   padding-right: 5px;
 }
 
-.winButton-3UMjdg{
+.winButton-3SigSb{
   margin-top: -5px!important;
   padding-top: 5px;
   height: 18px;
