--- a/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
@@ -901,3 +901,7 @@
 	border-left:5px solid var(--border-color);
 	border-radius:none;
 }
+
+.title-5wgnIa.forumOrHome-2VTX6r.container-ZMc96U.themed-Hp1KC_{
+	background-color: var(--background-color);
+}
