--- a/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
@@ -899,7 +899,7 @@
 
 .channelChatWrapper-35N3nR .container-3s2w-i{
 	border-left:5px solid var(--border-color);
-	border-radius:none;
+	border-radius:0;
 }
 
 .title-5wgnIa.forumOrHome-2VTX6r.container-ZMc96U.themed-Hp1KC_{
