--- a/Special_Theme/Spotify_Lele.theme.css
+++ b/Special_Theme/Spotify_Lele.theme.css
@@ -135,3 +135,15 @@
 .message__80c10.selected_fd9051,.mouse-mode.full-motion .message__80c10:hover{
   background-color: rgba(0, 0, 0, 0.4);
 }
+
+.sectionDivider__68d2a{
+  background-color: transparent;
+}
+
+.profileColors__2e2f0,.userProfileInnerThemedNonPremium__3d0a6{
+  background-color: var(--primary-660);
+}
+
+.userProfileInnerThemedNonPremium__3d0a6{
+  background: none;
+}
