--- a/DiscordEdit/discord_theme/DiscordEdit[2.0.0].theme.css
+++ b/DiscordEdit/discord_theme/DiscordEdit[2.0.0].theme.css
@@ -12,6 +12,8 @@
 https://htmlcolorcodes.com/fr/
 */
 
+@import url("https://evounnn.github.io/DiscordEdit/discord_theme/DE_border.theme.css")
+
 :root{
 
         /*couleur du fond*/
