--- a/DiscordEdit/discord_theme/DiscordEdit[2.0.0].theme.css
+++ b/DiscordEdit/discord_theme/DiscordEdit[2.0.0].theme.css
@@ -177,6 +177,14 @@ https://htmlcolorcodes.com/fr/
     background-color: var(--background-color);
 }
 
+.avatarSmall__7dc81{
+    box-shadow: var(--box-shadow-speak-user);
+}
+
+.avatarSmall__7dc81.avatarSpeaking_c95053{
+    box-shadow: inset 0 0 0 2px var(--green-360),inset 0 0 0 3px var(--background-secondary);
+}
+
 /* DE_border */
 
     .sidebar_ded4b5{
